--- a/src/components/Home/ServiceDetails/ServiceDetails.css
+++ b/src/components/Home/ServiceDetails/ServiceDetails.css
@@ -3,3 +3,7 @@
     border:none !important;
     box-shadow:2px 2px 6px gray;
 }
+.service-card:hover .service-card img {
+    transform:scale(1.2);
+    transition: transform 1s;
+}
