--- a/src/components/shared/Menubar/Menubar.css
+++ b/src/components/shared/Menubar/Menubar.css
@@ -8,7 +8,7 @@
     color: #009FE2;
 }
 .brand-text3 {
-    color: #ff8303;
+    color: #184d47;
 }
 .color-btn {
     background-color: #79B530 !important;
