--- a/src/components/Home/FeaturedService/FeatureService.css
+++ b/src/components/Home/FeaturedService/FeatureService.css
@@ -1,3 +1,86 @@
 .feature-container {
+    /* background-color: #b2c567; */
+    background-image:url('../../../images/hawai2.jpg');
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position: center center;
+    position:relative;
+    height:600px;
+}
+
+.feature-container::before {
+    content: "";
     background-color: #b2c567;
+    display:block;
+    height:100%;
+    width:100%;
+    position:absolute;
+    top:0;
+    left:0;
+    opacity:0.7;
+
+}
+.feature-container img {
+    border:4px solid white;
+    box-shadow:4px 4px 8px #d0e47f;;
+}
+.image-1{
+    height:350px !important;
+    width:60%;
+    position:absolute;
+    left:0px;
+    transition-property: width, height;
+    transition-duration:1s;
+}
+.image-1:hover {
+    z-index:1;
+    height:450px !important;
+    width:85%;
+    left:0px;
+    /* transform-origin:80% 100%; */
+}
+.image-2 {
+    height:350px;
+    width:60%;
+    position:absolute;
+    top:150px;
+    left:250px;
+    transition-property: height, width, transform;
+    transition-duration: 1s;
+}
+.image-2:hover {
+    z-index:1;
+    transform: scale(1.3);
+    /* display:block */
+}
+/* .image-4 {
+    height:350px;
+    width:60%;
+    position:absolute;
+    left:250px;
+    transition-property: height, width, transform;
+    transition-duration: 1s;
+}
+.image-4:hover {
+    z-index:1;
+    transform: scale(1.3);
+    display:block
+}
+.image-3 {
+    height:350px;
+    width:60%;
+    position:absolute;
+    top:150px;
+    left:0px;
+    transition-property: height, width, transform;
+    transition-duration: 1s;
+}
+.image-3:hover {
+    z-index:1;
+    transform: scale(1.3);
+    display:block
+} */
+.side-img:hover {
+    transform: scale(2);
+    transition:transform 1s;
 }
