--- a/src/components/Home/Header/Header.css
+++ b/src/components/Home/Header/Header.css
@@ -1,3 +1,23 @@
 .header-container {
+    /* background-color: #2f5501; */
+    background-image: url('../../../images/ireland2.jpg');
+    background-repeat:no-repeat;
+    background-size:cover;
+    background-position:center center;
+    position:relative;
+    box-shadow:4px 6px 8px gray;
+}
+.header-container::before{
+    content: "";
     background-color: #2f5501;
+    height:100%;
+    width:100%;
+    display:block;
+    position: absolute;
+    top:0;
+    left:0;
+    opacity: 0.8;
+}
+.header-container img {
+    box-shadow:3px 3px 8px rgb(173, 173, 173), -3px -3px 8px rgb(173, 173, 173);
 }
